Add spec for reference functions

--- a/src/list/compare/_numeric.sass
+++ b/src/list/compare/_numeric.sass
@@ -11,7 +11,7 @@
 
 
 ///
-/// The numeric comparison method used by the sort function.
+/// Returns a function reference to the numeric comparison method used by the sort function.
 ///
 /// @return {Function}
 ///
@@ -34,7 +34,7 @@
 
 
 ///
-/// The descending numeric comparison method used by the sort function.
+/// Returns a function reference to the descending numeric comparison method used by the sort function.
 ///
 /// @return {Function}
 ///
