--- a/src/list/compare/_string.sass
+++ b/src/list/compare/_string.sass
@@ -13,7 +13,7 @@
 
 
 ///
-/// The string comparison method used by the sort function.
+/// Returns a function reference to the string comparison method used by the sort function.
 ///
 /// @return {Function}
 ///
@@ -36,7 +36,7 @@
 
 
 ///
-/// The descending string comparison method used by the sort function.
+/// Returns a function reference to the descending string comparison method used by the sort function.
 ///
 /// @return {Function}
 ///
