--- a/src/list/_empty.sass
+++ b/src/list/_empty.sass
@@ -22,12 +22,10 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require exception.$function
 /// @require exception.separator
 /// @require param.separator-is-invalid
 ///
 @function empty($separator: null, $bracketed: null, $list: null)
-	exception.$function: 'empty'
 
 	@if meta.type-of($list) == 'list'
 		@if $separator == auto or $separator == null
@@ -44,6 +42,6 @@
 			$bracketed: false
 
 	@if param.separator-is-invalid($separator)
-		@error exception.separator()
+		@error exception.separator('empty')
 
 	@return list.join((), (), $separator, $bracketed)
