--- a/src/internal/_exception.sass
+++ b/src/internal/_exception.sass
@@ -7,57 +7,19 @@
 
 @use 'sass:meta'
 @use 'sass:string'
-@use '../list/join'
+
+
+@forward 'sass-exception'
 
 
 ///
-/// The name of the function issuing the error.
+/// Returns an error message stating that a separator parameter received the wrong value.
 ///
-/// @type String
-///
-/// @access public
-///
-$function: null
-
-
-///
-/// Structures an error message stating an issue with one or more parameters.
-///
-/// @param {String} $value - The message which describes the issue.
-/// @param {ArgList} $params - The names of the parameters for which there is an issue.
-/// @return {String}
-///
-/// @access private
-/// @requires $function
-/// @requires join.join
-///
-@function param($message, $params...)
-	$params: join.join($params, ', $')
-	@return string.unquote('$#{$params}: #{$message} for `#{$function}()`.')
-
-
-///
-/// Gets an error message stating that a parameter received the wrong type.
-///
-/// @param {String} $param - The name of the parameter which has received the wrong type.
-/// @param {*} $value - The value which was received.
-/// @param {String} $type - The type which is expected.
+/// @param {String} $context - The name of the function or mixin issuing the error.
 /// @return {String}
 ///
 /// @access public
 /// @require param
 ///
-@function type($param, $value, $type)
-	@return param('`#{meta.inspect($value)}` is not a #{string.unquote($type)}', $param)
-
-
-///
-/// Gets an error message stating that a selector parameter received the wrong value.
-///
-/// @return {String}
-///
-/// @access public
-/// @require param
-///
-@function separator()
-	@return param('Must be "space", "comma", "slash", or "auto"', 'separator')
+@function separator($context)
+	@return sass-exception.param($context, 'Must be "space", "comma", "slash", or "auto"', 'separator')
