--- a/src/list/_filter.sass
+++ b/src/list/_filter.sass
@@ -25,19 +25,17 @@
 ///
 /// @access public
 /// @require empty.empty
-/// @require internal.$exception-function
+/// @require internal.exception-param-type
 /// @require internal.exception-separator
-/// @require internal.exception-type
 /// @require internal.param-separator-is-invalid
 ///
 @function filter($list, $predicate, $separator: auto, $args...)
-	internal.$exception-function: 'filter'
 
 	@if meta.type-of($predicate) != 'function'
-		@error internal.exception-type('predicate', $predicate, 'function')
+		@error internal.exception-param-type('filter', 'predicate', $predicate, 'function')
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('filter')
 
 	$result: empty.empty($separator, $list: $list)
 	$index: 1
