--- a/src/list/_insert-nth.sass
+++ b/src/list/_insert-nth.sass
@@ -25,22 +25,19 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.$exception-function
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 /// @require internal.param-validate-index
 /// @require internal.insert-nth
 ///
 @function insert-nth($list, $index, $value, $separator: auto)
-	internal.$exception-function: 'insert-nth'
-
-	$index: internal.param-validate-index('index', $index, list.length($list))
+	$index: internal.param-validate-index('insert-nth', 'index', $index, list.length($list))
 
 	@if meta.type-of($index) != 'number'
 		@error $index
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('insert-nth')
 
 	@return internal.insert-nth($list, $index, $value, $separator)
 
