--- a/src/list/_last-index.sass
+++ b/src/list/_last-index.sass
@@ -23,14 +23,11 @@
 /// @throw Invalid index #{$from-index} for a list with #{$length} elements.
 ///
 /// @access public
-/// @require internal.$exception-function
 /// @require internal.param-validate-index
 ///
 @function last-index($list, $value, $from-index: list.length($list))
-	internal.$exception-function: 'last-index'
-
 	$length: list.length($list)
-	$from-index: internal.param-validate-index('from-index', $from-index, $length)
+	$from-index: internal.param-validate-index('last-index', 'from-index', $from-index, $length)
 
 	@if meta.type-of($from-index) != 'number'
 		@error $from-index
