--- a/src/list/_map.sass
+++ b/src/list/_map.sass
@@ -25,19 +25,17 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.$exception-function
+/// @require internal.exception-param-type
 /// @require internal.exception-separator
-/// @require internal.exception-type
 /// @require internal.param-separator-is-invalid
 ///
 @function map($list, $transformer, $separator: auto, $bracketed: auto, $args...)
-	internal.$exception-function: 'map'
 
 	@if meta.type-of($transformer) != 'function'
-		@error internal.exception-type('transformer', $transformer, 'function')
+		@error internal.exception-param-type('map', 'transformer', $transformer, 'function')
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('map')
 
 	$result: empty.empty($separator, $bracketed, $list)
 	$index: 1
