--- a/src/list/_reduce-right.sass
+++ b/src/list/_reduce-right.sass
@@ -23,20 +23,18 @@
 /// @throw Reduce of empty list with no initial value.
 ///
 /// @access public
-/// @require internal.$exception-function
 /// @require internal.exception-param
-/// @require internal.exception-type
+/// @require internal.exception-param-type
 ///
 @function reduce-right($list, $transformer, $initial-value: null, $args...)
-	internal.$exception-function: 'reduce-right'
 
 	@if meta.type-of($transformer) != 'function'
-		@error internal.exception-type('transformer', $transformer, 'function')
+		@error internal.exception-param-type('reduce-right', 'transformer', $transformer, 'function')
 
 	$length: list.length($list)
 
 	@if $initial-value == null and not $length
-		@error internal.exception-param('Reduce of empty list with no initial value', 'list', 'initial-value')
+		@error internal.exception-param('Reduce of empty list with no initial value', 'reduce-right', 'list', 'initial-value')
 
 	$accumulator: $initial-value
 
