--- a/src/list/_remove.sass
+++ b/src/list/_remove.sass
@@ -19,16 +19,14 @@
 /// @return {List}
 ///
 /// @access public
-/// @require internal.$exception-function
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 /// @require remove-nth.remove-nth
 ///
 @function remove($list, $value, $separator: auto)
-	internal.$exception-function: 'remove'
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('remove')
 
 	$index: list.index($list, $value)
 
