--- a/src/list/_replace.sass
+++ b/src/list/_replace.sass
@@ -23,16 +23,14 @@
 ///
 /// @access public
 /// @require _replace-transformer
-/// @require internal.$exception-function
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 /// @require map.map
 ///
 @function replace($list, $value, $replacement, $separator: auto)
-	internal.$exception-function: 'replace'
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('replace')
 
 	@return map.map($list, meta.get-function('_replace-transformer'), $separator, auto, $value, $replacement)
 
