--- a/src/list/_reverse.sass
+++ b/src/list/_reverse.sass
@@ -20,15 +20,13 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.$exception-function
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 ///
 @function reverse($list, $separator: auto)
-	internal.$exception-function: 'reverse'
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('reverse')
 
 	$length: list.length($list)
 
