--- a/src/list/_set-nth.sass
+++ b/src/list/_set-nth.sass
@@ -25,21 +25,18 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.$exception-function
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 /// @require internal.param-validate-index
 ///
 @function set-nth($list, $index, $value, $separator: auto)
-	internal.$exception-function: 'set-nth'
-
-	$index: internal.param-validate-index('index', $index, list.length($list))
+	$index: internal.param-validate-index('set-nth', 'index', $index, list.length($list))
 
 	@if meta.type-of($index) != 'number'
 		@error $index
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('set-nth')
 
 	@return list.join(list.set-nth($list, $index, $value), (), $separator)
 
