--- a/src/list/_slice.sass
+++ b/src/list/_slice.sass
@@ -36,31 +36,28 @@
 ///
 /// @access public
 /// @require empty.empty
-/// @require internal.$exception-function
 /// @require internal.exception-param
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 /// @require internal.param-validate-index
 ///
 @function slice($list, $start-at, $end-at: list.length($list), $separator: auto)
-	internal.$exception-function: 'slice'
-
 	$length: list.length($list)
-	$start-at: internal.param-validate-index('start-at', $start-at, $length)
+	$start-at: internal.param-validate-index('slice', 'start-at', $start-at, $length)
 
 	@if meta.type-of($start-at) != 'number'
 		@error $start-at
 
-	$end-at: internal.param-validate-index('end-at', $end-at, $length)
+	$end-at: internal.param-validate-index('slice', 'end-at', $end-at, $length)
 
 	@if meta.type-of($end-at) != 'number'
 		@error $end-at
 
 	@if $start-at > $end-at
-		@error internal.exception-param('The starting index is not less than the ending index', 'start-at', 'end-at')
+		@error internal.exception-param('The starting index is not less than the ending index', 'slice', 'start-at', 'end-at')
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('slice')
 
 	$result: empty.empty($separator, $list: $list)
 
