--- a/src/list/_sort.sass
+++ b/src/list/_sort.sass
@@ -43,21 +43,19 @@
 /// @require _order
 /// @require compare.string
 /// @require find.find
-/// @require internal.$exception-function
 /// @require internal.exception-param
+/// @require internal.exception-param-type
 /// @require internal.exception-separator
-/// @require internal.exception-type
 /// @require internal.param-separator-is-invalid
 /// @require slice.slice
 ///
 @function sort($list, $compare: compare.string(), $center: auto, $separator: auto)
-	internal.$exception-function: 'sort'
 
 	@if meta.type-of($compare) != 'function'
-		@error internal.exception-type('compare', $compare, 'function')
+		@error internal.exception-param-type('sort', 'compare', $compare, 'function')
 
 	@if internal.param-separator-is-invalid($separator)
-		@error internal.exception-separator()
+		@error internal.exception-separator('sort')
 
 	$length: list.length($list)
 
@@ -67,10 +65,10 @@
 	@if $center != auto
 
 		@if meta.type-of($center) != 'number'
-			@error internal.exception-type('center', $center, 'number')
+			@error internal.exception-param-type('sort', 'center', $center, 'number')
 
 		@if $center < 0 or $center > 0
-			@error internal.exception-param('Must be "auto" or zero with or without units', 'center')
+			@error internal.exception-param('Must be "auto" or zero with or without units', 'sort', 'center')
 
 	@else
 		$item: find.find($list, meta.get-function('_is-number-and-not-unitless'))
