Abstract sass-meta

--- a/src/internal/_exception.sass
+++ b/src/internal/_exception.sass
@@ -9,7 +9,8 @@
 @use 'sass:string'
 
 
-@forward 'sass-exception'
+@forward 'sass-exception/src/exception/param'
+@forward 'sass-exception/src/exception/param-type'
 
 
 ///
