--- a/src/list/_concat.sass
+++ b/src/list/_concat.sass
@@ -7,6 +7,7 @@
 
 @use 'sass:list'
 @use 'empty'
+@use 'sass-meta/src/meta/get-keyword' as sass-meta
 @use '../internal'
 
 
@@ -25,11 +26,11 @@
 /// @require empty.empty
 /// @require internal.exception-param
 /// @require internal.exception-separator
-/// @require internal.param-get
 /// @require internal.param-separator-is-invalid
+/// @require sass-meta.get-keyword
 ///
 @function concat($values...)
-	$separator: internal.param-get($values, 'separator', auto)
+	$separator: sass-meta.get-keyword($values, 'separator', auto)
 
 	@if internal.param-separator-is-invalid($separator)
 		@error internal.exception-separator('concat')
@@ -37,7 +38,7 @@
 	@if list.length($values) < 2
 		@error internal.exception-param('Two or more values are required', 'concat', 'values')
 
-	$bracketed: internal.param-get($values, 'bracketed', auto)
+	$bracketed: sass-meta.get-keyword($values, 'bracketed', auto)
 	$result: empty.empty($separator, $bracketed, list.nth($values, 1))
 
 	@each $value in $values
