--- a/src/list/compare/_numeric.sass
+++ b/src/list/compare/_numeric.sass
@@ -7,6 +7,7 @@
 
 @use 'sass:math'
 @use 'sass:meta'
+@use 'sass-meta/src/meta/call-or-reference' as sass-meta
 @use '../../internal'
 
 
@@ -28,9 +29,10 @@
 ///
 /// @access public
 /// @require _numeric
+/// @require sass-meta.call-or-reference
 ///
 @function numeric($args...)
-	@return internal.call-or-reference(meta.get-function('_numeric'), $args...)
+	@return sass-meta.call-or-reference(meta.get-function('_numeric'), $args...)
 
 
 ///
@@ -51,9 +53,10 @@
 ///
 /// @access public
 /// @require _numeric-desc
+/// @require sass-meta.call-or-reference
 ///
 @function numeric-desc($args...)
-	@return internal.call-or-reference(meta.get-function('_numeric-desc'), $args...)
+	@return sass-meta.call-or-reference(meta.get-function('_numeric-desc'), $args...)
 
 
 ///
