--- a/test/_api-combined.sass
+++ b/test/_api-combined.sass
@@ -5,7 +5,8 @@
 /// @group tests
 ////
 
-@use '../list'
+@use '../list' as combined
+@use 'sass:list' as native
 @use 'sass:map'
 @use 'sass:meta'
 @use 'true'
@@ -13,12 +14,15 @@
 
 @include true.describe('Combined API')
 
-	$module-functions: meta.module-functions('list')
+	$combined-functions: meta.module-functions('combined')
+	$native-functions: meta.module-functions('native')
 
 	@include true.it('Has access to native list.append() as module function')
-		$assert: map.has-key($module-functions, 'append')
-		@include true.assert-true($assert, '[append]')
+		$combine: map.get($combined-functions, 'append')
+		$native: map.get($native-functions, 'append')
+		@include true.assert-equal($combine, $native)
 
-	@include true.it("Has access to library's src.prepend() as module function")
-		$assert: map.has-key($module-functions, 'prepend')
-		@include true.assert-true($assert, '[prepend]')
+	@include true.it("Has access to library's src.index() as module function")
+		$combine: map.get($combined-functions, 'index')
+		$native: map.get($native-functions, 'index')
+		@include true.assert-unequal($combine, $native)
