Fix incorrect parameter order

--- a/src/internal/_exception.sass
+++ b/src/internal/_exception.sass
@@ -23,4 +23,4 @@
 /// @require param
 ///
 @function separator($context)
-	@return sass-exception.param($context, 'Must be "space", "comma", "slash", or "auto"', 'separator')
+	@return sass-exception.param('Must be "space", "comma", "slash", or "auto"', $context, 'separator')
