--- a/test/list/_join.sass
+++ b/test/list/_join.sass
@@ -5,45 +5,15 @@
 /// @group tests
 ////
 
-@use 'sass:list'
+@use 'sass:meta'
 @use 'src'
 @use 'true'
+@use 'sass-exception/src/internal/join' as sass-exception
 
 
 @include true.describe('@function src.join')
 
-	@include true.it('Automatically selects space for glue')
-		$assert: src.join([10px 20px 'a'])
-		$expected: '10px 20px a'
-		@include true.assert-equal($assert, $expected)
-
-	@include true.it('Automatically selects comma for glue')
-		$assert: src.join([10px, 20px, 'a'])
-		$expected: '10px,20px,a'
-		@include true.assert-equal($assert, $expected)
-
-	@include true.it('Automatically selects slash for glue')
-		$assert: src.join(list.slash(10px, 20px, 'a'))
-		$expected: '10px/20px/a'
-		@include true.assert-equal($assert, $expected)
-
-	@include true.it('Use specified string for glue')
-		$assert: src.join([10px 20px 'a'], '-')
-		$expected: '10px-20px-a'
-		@include true.assert-equal($assert, $expected)
-
-	@include true.it('Exclude nested lists')
-		$list: [10px 20px 'a' (#fff, rgb(127, 127, 127), #000)]
-		$assert: src.join($list, ' ?? ')
-		$expected: '10px ?? 20px ?? a ?? #fff, #7f7f7f, #000'
-		@include true.assert-equal($assert, $expected)
-
-		$list: [10px 20px 'a' #fff rgb(127, 127, 127) #000]
-		$assert: src.join($list, ' ?? ')
-		$expected: '10px ?? 20px ?? a ?? #fff ?? #7f7f7f ?? #000'
-		@include true.assert-equal($assert, $expected)
-
-	@include true.it('Convert the glue to a string')
-		$assert: src.join([10px, 20px, 'a'], rgb(127, 127, 127))
-		$expected: '10px#7f7f7f20px#7f7f7fa'
+	@include true.it('Provides the same function as received from `sass-exception`')
+		$assert: meta.get-function('join', $module: 'sass-exception')
+		$expected: meta.get-function('join', $module: 'src')
 		@include true.assert-equal($assert, $expected)
