--- a/src/list/_sort.sass
+++ b/src/list/_sort.sass
@@ -44,7 +44,7 @@
 /// @require compare.string
 /// @require find.find
 /// @require internal.exception-param
-/// @require internal.exception-param-type
+/// @require internal.exception-parameter-type
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 /// @require slice.slice
@@ -52,7 +52,7 @@
 @function sort($list, $compare: compare.string(), $center: auto, $separator: auto)
 
 	@if meta.type-of($compare) != 'function'
-		@error internal.exception-param-type('sort', 'compare', $compare, 'function')
+		@error internal.exception-parameter-type('sort', 'compare', $compare, 'function')
 
 	@if internal.param-separator-is-invalid($separator)
 		@error internal.exception-separator('sort')
@@ -65,7 +65,7 @@
 	@if $center != auto
 
 		@if meta.type-of($center) != 'number'
-			@error internal.exception-param-type('sort', 'center', $center, 'number')
+			@error internal.exception-parameter-type('sort', 'center', $center, 'number')
 
 		@if $center < 0 or $center > 0
 			@error internal.exception-param('Must be "auto" or zero with or without units', 'sort', 'center')
