--- a/src/list/_map.sass
+++ b/src/list/_map.sass
@@ -25,14 +25,14 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.exception-param-type
+/// @require internal.exception-parameter-type
 /// @require internal.exception-separator
 /// @require internal.param-separator-is-invalid
 ///
 @function map($list, $transformer, $separator: auto, $bracketed: auto, $args...)
 
 	@if meta.type-of($transformer) != 'function'
-		@error internal.exception-param-type('map', 'transformer', $transformer, 'function')
+		@error internal.exception-parameter-type('map', 'transformer', $transformer, 'function')
 
 	@if internal.param-separator-is-invalid($separator)
 		@error internal.exception-separator('map')
