--- a/src/list/_some.sass
+++ b/src/list/_some.sass
@@ -20,12 +20,12 @@
 /// @throw `#{$predicate}` is not a function.
 ///
 /// @access public
-/// @require internal.exception-param-type
+/// @require internal.exception-parameter-type
 ///
 @function some($list, $predicate, $args...)
 
 	@if meta.type-of($predicate) != 'function'
-		@error internal.exception-param-type('some', 'predicate', $predicate, 'function')
+		@error internal.exception-parameter-type('some', 'predicate', $predicate, 'function')
 
 	$index: 1
 
