--- a/src/list/_empty.sass
+++ b/src/list/_empty.sass
@@ -8,7 +8,7 @@
 @use 'sass:list'
 @use 'sass:meta'
 @use '../internal/exception'
-@use '../internal/param'
+@use '../internal/parameter'
 
 
 ///
@@ -23,7 +23,7 @@
 ///
 /// @access public
 /// @require exception.separator
-/// @require param.separator-is-invalid
+/// @require parameter.separator-is-invalid
 ///
 @function empty($separator: null, $bracketed: null, $list: null)
 
@@ -41,7 +41,7 @@
 		@if $bracketed == null
 			$bracketed: false
 
-	@if param.separator-is-invalid($separator)
+	@if parameter.separator-is-invalid($separator)
 		@error exception.separator('empty')
 
 	@return list.join((), (), $separator, $bracketed)
