--- a/src/list/_reduce.sass
+++ b/src/list/_reduce.sass
@@ -23,7 +23,7 @@
 /// @throw Reduction of empty list with no initial value.
 ///
 /// @access public
-/// @require internal.exception-param
+/// @require internal.exception-parameter
 /// @require internal.exception-parameter-type
 ///
 @function reduce($list, $transformer, $initial-value: null, $args...)
@@ -32,7 +32,7 @@
 		@error internal.exception-parameter-type('reduce', 'transformer', $transformer, 'function')
 
 	@if $initial-value == null and not list.length($list)
-		@error internal.exception-param('Reduction of empty list with no initial value', 'reduce', 'list', 'initial-value')
+		@error internal.exception-parameter('Reduction of empty list with no initial value', 'reduce', 'list', 'initial-value')
 
 	$accumulator: $initial-value
 	$index: 1
