--- a/src/internal/_parameter.sass
+++ b/src/internal/_parameter.sass
@@ -32,7 +32,7 @@
 ///
 /// @access public
 /// @require exception.type
-/// @require exception.param
+/// @require exception.parameter
 ///
 @function validate-index($context, $param, $value, $length)
 
@@ -40,13 +40,13 @@
 		@return exception.type($param, $value, 'number')
 
 	@if $value == 0
-		@return exception.param('List index may not be 0', $context, $param)
+		@return exception.parameter('List index may not be 0', $context, $param)
 
 	// Transform negative index to positive index.
 	@if $value < 1 and $value + $length + 1 > 0
 		$value: $value + $length + 1
 
 	@if $value > $length or $value < 0
-		@return exception.param('Invalid index #{$value} for a list with #{$length} elements', $context, $param)
+		@return exception.parameter('Invalid index #{$value} for a list with #{$length} elements', $context, $param)
 
 	@return $value
