--- a/src/list/_concat.sass
+++ b/src/list/_concat.sass
@@ -26,13 +26,13 @@
 /// @require empty.empty
 /// @require internal.exception-parameter
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 /// @require sass-meta.get-keyword
 ///
 @function concat($values...)
 	$separator: sass-meta.get-keyword($values, 'separator', auto)
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('concat')
 
 	@if list.length($values) < 2
