--- a/src/list/_distinct.sass
+++ b/src/list/_distinct.sass
@@ -24,11 +24,11 @@
 /// @require _distinct-predicate
 /// @require filter.filter
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 ///
 @function distinct($list, $separator: auto)
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('distinct')
 
 	@return filter.filter($list, meta.get-function('_distinct-predicate'), $separator)
