--- a/src/list/_flat.sass
+++ b/src/list/_flat.sass
@@ -25,10 +25,10 @@
 /// @throw Must be "space", "comma", "slash", or "auto".
 ///
 /// @access public
-/// @require internal.exception-param
+/// @require internal.exception-parameter
 /// @require internal.exception-parameter-type
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 ///
 @function flat($list, $depth: 1, $separator: auto, $bracketed: auto)
 
@@ -36,9 +36,9 @@
 		@error internal.exception-parameter-type('flat', 'depth', $depth, 'number')
 
 	@if $depth < 1
-		@error internal.exception-param('The depth may not be less than 1', 'flat', 'depth')
+		@error internal.exception-parameter('The depth may not be less than 1', 'flat', 'depth')
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('flat')
 
 	@return _flat($list, $depth, 1, $separator, $bracketed)
