--- a/src/list/_index.sass
+++ b/src/list/_index.sass
@@ -23,11 +23,11 @@
 /// @throw Invalid index #{$from-index} for a list with #{$length} elements.
 ///
 /// @access public
-/// @require internal.param-validate-index
+/// @require internal.validate-index
 ///
 @function index($list, $value, $from-index: 1)
 	$length: list.length($list)
-	$from-index: internal.param-validate-index('index', 'from-index', $from-index, $length)
+	$from-index: internal.validate-index('index', 'from-index', $from-index, $length)
 
 	@if meta.type-of($from-index) != 'number'
 		@error $from-index
