--- a/src/list/_insert-nth.sass
+++ b/src/list/_insert-nth.sass
@@ -26,17 +26,17 @@
 ///
 /// @access public
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
-/// @require internal.param-validate-index
+/// @require internal.separator-is-invalid
 /// @require internal.insert-nth
+/// @require internal.validate-index
 ///
 @function insert-nth($list, $index, $value, $separator: auto)
-	$index: internal.param-validate-index('insert-nth', 'index', $index, list.length($list))
+	$index: internal.validate-index('insert-nth', 'index', $index, list.length($list))
 
 	@if meta.type-of($index) != 'number'
 		@error $index
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('insert-nth')
 
 	@return internal.insert-nth($list, $index, $value, $separator)
