--- a/src/list/_map.sass
+++ b/src/list/_map.sass
@@ -27,14 +27,14 @@
 /// @access public
 /// @require internal.exception-parameter-type
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 ///
 @function map($list, $transformer, $separator: auto, $bracketed: auto, $args...)
 
 	@if meta.type-of($transformer) != 'function'
 		@error internal.exception-parameter-type('map', 'transformer', $transformer, 'function')
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('map')
 
 	$result: empty.empty($separator, $bracketed, $list)
