--- a/src/list/_prepend.sass
+++ b/src/list/_prepend.sass
@@ -22,11 +22,11 @@
 /// @access public
 /// @require internal.exception-separator
 /// @require internal.insert-nth
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 ///
 @function prepend($list, $value, $separator: auto)
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('prepend')
 
 	@return internal.insert-nth($list, 1, $value, $separator)
