--- a/src/list/_remove-nth.sass
+++ b/src/list/_remove-nth.sass
@@ -26,18 +26,18 @@
 ///
 /// @access public
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
-/// @require internal.param-validate-index
+/// @require internal.separator-is-invalid
+/// @require internal.validate-index
 /// @require slice.slice
 ///
 @function remove-nth($list, $index, $separator: auto)
 	$length: list.length($list)
-	$index: internal.param-validate-index('remove-nth', 'index', $index, $length)
+	$index: internal.validate-index('remove-nth', 'index', $index, $length)
 
 	@if meta.type-of($index) != 'number'
 		@error $index
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('remove-nth')
 
 	@if $index == 1
