--- a/src/list/_remove.sass
+++ b/src/list/_remove.sass
@@ -20,12 +20,12 @@
 ///
 /// @access public
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 /// @require remove-nth.remove-nth
 ///
 @function remove($list, $value, $separator: auto)
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('remove')
 
 	$index: list.index($list, $value)
