--- a/src/list/_replace.sass
+++ b/src/list/_replace.sass
@@ -24,12 +24,12 @@
 /// @access public
 /// @require _replace-transformer
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 /// @require map.map
 ///
 @function replace($list, $value, $replacement, $separator: auto)
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('replace')
 
 	@return map.map($list, meta.get-function('_replace-transformer'), $separator, auto, $value, $replacement)
