--- a/src/list/_reverse.sass
+++ b/src/list/_reverse.sass
@@ -21,11 +21,11 @@
 ///
 /// @access public
 /// @require internal.exception-separator
-/// @require internal.param-separator-is-invalid
+/// @require internal.separator-is-invalid
 ///
 @function reverse($list, $separator: auto)
 
-	@if internal.param-separator-is-invalid($separator)
+	@if internal.separator-is-invalid($separator)
 		@error internal.exception-separator('reverse')
 
 	$length: list.length($list)
